<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7a218"
    android:orientation="vertical"
    tools:context="com.baonguyen.project360.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tenweb"
                android:textColor="#ffffff"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dia_chi_ip"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/diaChiIP"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="textPhonetic"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cong"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/diaChiCong"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/myButtonConnect"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle"
                android:text="@string/ketnoiServer"
                android:textColor="@color/colorPrimary"
                android:textOff="Kết Nối"
                android:textOn="Ngắt"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/up"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/up"
                        android:onClick="onClickUp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/left"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/left"
                        android:onClick="onClickLeft"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/stop"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/stop"
                        android:onClick="onClickStop"
                        android:text="@string/den5"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp" />


                    <Button
                        android:id="@+id/right"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/right"
                        android:onClick="onClickRight"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/down"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/down"
                        android:onClick="onClickDown"
                        android:textColor="@color/colorPrimary"
                        android:textOn="Đ12"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center">

                <Button
                    android:id="@+id/a"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:background="@drawable/stop"
                    android:onClick="onClickA"
                    android:text="@string/bathet"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/b"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/stop"
                    android:onClick="onClickB"
                    android:text="@string/tathat"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
